--- a/race1.html
+++ b/race1.html
@@ -199,7 +199,7 @@
         const pace = adjustedPace(seg.percent);
         const segDistance = seg.duration / pace;
         if (segDistance < remainingDistance) {
-          totalTimeMinutes += seg.duration;
+          totalTimeMinutes += seg.duration * 0.8;
           remainingDistance -= segDistance * 0.8;
         } else {
           totalTimeMinutes += remainingDistance * pace;
@@ -249,7 +249,7 @@
         const pace = adjustedPace(seg.percent);
         const segDistance = seg.duration / pace;
         if (segDistance < remainingDistance) {
-          totalTimeMinutes += seg.duration;
+          totalTimeMinutes += seg.duration * 0.8;
           remainingDistance -= segDistance * 0.8;
         } else {
           totalTimeMinutes += remainingDistance * pace;
