--- a/race1.html
+++ b/race1.html
@@ -199,8 +199,8 @@
         const pace = adjustedPace(seg.percent);
         const segDistance = seg.duration / pace;
         if (segDistance < remainingDistance) {
-          totalTimeMinutes += seg.duration * 0.8;
-          remainingDistance -= segDistance * 0.8;
+          totalTimeMinutes += seg.duration * 1.2;
+          remainingDistance -= segDistance ;
         } else {
           totalTimeMinutes += remainingDistance * pace;
           remainingDistance = 0;
@@ -249,8 +249,8 @@
         const pace = adjustedPace(seg.percent);
         const segDistance = seg.duration / pace;
         if (segDistance < remainingDistance) {
-          totalTimeMinutes += seg.duration * 0.8;
-          remainingDistance -= segDistance * 0.8;
+          totalTimeMinutes += seg.duration * 1.2;
+          remainingDistance -= segDistance;
         } else {
           totalTimeMinutes += remainingDistance * pace;
           remainingDistance = 0;
